fix: remove unused Collectors import and use toList() instead